--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
 </head>
 <body>
   
- 
+ <!-- Header -->
+<header class="header">
+  <div class="container">
+    <!-- Logo -->
+    <a href="index.html" class="grid-4">
+      <img src="./img/bikcraft.png" alt="Bikecraft">
+    </a>
+    <!-- Menu -->
+    <nav class="grid-12 header-menu">
+      <ul>
+       <li><a href="sobre.html">Sobre</a></li>
+       <li><a href="produtos.html">Produtos</a></li>
+       <li><a href="portifolio.html">Portifólio</a></li>
+       <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
 
 </body>
