--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
   </div>
 </header>
 
+ <!-- Introducao -->
+<section class="introducao">
+  <div class="container">
+    <h1>Bicicletas feitas a mão</h1>
+    <blockquote class="quote-externo">
+      <p>"não tenha nada em sua casa que você não considere útil ou acretita ser bonito."</p>
+      <cite>William Morris</cite>
+    </blockquote>
 
+    <a href="produtos.html" class="btn">Orçamento</a>
+  </div>
+</section>
 
 </body>
 </html>
