--- a/index.html
+++ b/index.html
@@ -43,5 +43,41 @@
   </div>
 </section>
 
+<!-- Produtos -->
+<section class="container produtos">
+  <h2 class="subtitulo">Produtos</h2>
+
+  <ul class="produtos-lista">  
+    <li class="grid-1-3">
+      <div class="produtos-lista-icone">
+        <img src="./img/produtos/passeio.png" alt="Bikecraft passeio" srcset="">
+      </div>
+        <h3>Passeio</h3>
+        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+    </li>
+
+    <li class="grid-1-3">
+      <div class="produtos-lista-icone">
+        <img src="./img/produtos/esporte.png" alt="Bikecraft esporte" srcset="">
+      </div>    
+        <h3>Esporte</h3>
+        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+    </li>
+
+    <li class="grid-1-3">
+      <div class="produtos-lista-icone">
+        <img src="./img/produtos/retro.png" alt="Bikecraft retro" srcset="">
+      </div>
+        <h3>Retro</h3>
+        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+    </li>
+  </ul>
+
+  <div class="call">
+    <p>clique aqui e veja os detalhes dos produtos</p>
+    <a href="produtos.html" class="btn">Produtos</a>
+  </div>
+  
+</section>
 </body>
 </html>
