feat: portifolio section

--- a/index.html
+++ b/index.html
@@ -79,5 +79,24 @@
   </div>
   
 </section>
+
+<!-- Portifolio -->
+<section class="portifolio">
+  <div class="container">
+    <h2 class="subtitulo">Portifólio</h2>
+
+    <ul class="portifolio-lista">
+      <li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="Bicicicleta retro" srcset=""></li>
+      <li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="Bicicicleta passeio" srcset=""></li>
+      <li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="Bicicicleta esporte" srcset=""></li>
+    </ul>
+
+    <div class="call">
+      <p>conheça mais do nosso portifólio</p>
+      <a href="portifolio.html" class="btn">Portifólio</a>
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
