--- a/index.html
+++ b/index.html
@@ -98,5 +98,31 @@
   </div>
 </section>
 
+<!-- Qualidade -->
+<section class="container qualidade">
+  <h2 class="subtitulo">Qualidade</h2>
+  <img src="./img/bikcraft-qualidade.png" alt="Qualidade bikecraft" srcset="">
+
+  <ul class="qualidade-lista">
+    <li class="grid-1-3">
+      <h3>Durabilidade</h3>
+      <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+    </li>
+    <li class="grid-1-3">
+      <h3>Design</h3>
+      <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+    </li>
+    <li class="grid-1-3">
+      <h3>Sustentabilidade</h3>
+      <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+    </li>
+  </ul>
+
+  <div class="call">
+    <p>conheça mais a nossa história</p>
+    <a href="sobre.html" class="btn">Sobre</a>
+  </div>
+</section>
+
 </body>
 </html>
