--- a/index.html
+++ b/index.html
@@ -124,5 +124,49 @@
   </div>
 </section>
 
+<!-- Frase final -->
+<section class="final">
+  <blockquote class="quote-externo container">
+    <p>"o verdadeiro segredo da felidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana."</p>
+    <cite>William Morris</cite>
+  </blockquote>
+</section>
+
+<!-- Footer -->
+<footer>
+  <div class="footer">
+    <div class="container">
+      <div class="grid-8 footer-historia">
+        <h3>Nossa História</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab optio repellat ex vero quod ipsa officiis.</p>
+      </div>
+
+      <div class="grid-4 footer-contato">
+        <h3>Contato</h3>
+        <ul>
+          <li>00 2323-4411</li>
+          <li>contato@bikecraft.com</li>
+          <li>Botafogo - RJ</li>
+        </ul>
+      </div>
+
+      <div class="grid-4 footer-redes-sociais">
+        <h3>Redes Sociais</h3>
+        <ul>
+          <li><a href="#"><img src="./img/redes-sociais/facebook.png" alt="facebook"></a></li>
+          <li><a href="#"><img src="./img/redes-sociais/instagram.png" alt="instagram"></a></li>
+          <li><a href="#"><img src="./img/redes-sociais/twitter.png" alt="twitter"></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="copy">
+    <div class="container">
+      <p class="grid-16">Alguns direitos reservados - Bikecraft 2021</p>
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
